# platformer-test

./: Cargo.toml  README.md
assets/: .gitignore  a.tsx  input.ron  map.tmx  map1.tmx  world.ldtk
assets/world/: large_flat.tmx  start.tmx  walljumps.tmx  world.world
src/: camera.rs  debug.rs  follow.rs  input_binding.rs  input_mapper.rs  level.rs  lib.rs  main.rs  pausing.rs  physics.rs  player.rs  time.rs  world.rs
src/util/: time.rs
