[package]
name = "platformer-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# TODO: Remove all deps not being used
[dependencies]
glam = "0.20.2"
ggez-egui = "0.1.7"
# FIXME: Wait until 0.8.0 (Needed for subcontext split)
ggez = "0.7.0"
winit = { version = "0.25.0", features = ["serde"] }
gilrs = { version = "0.8.2", features = ["serde-serialize"] }
# FIXME: Change to 0.11.0 when stabilized
tiled = { git = "https://github.com/mapeditor/rs-tiled", rev = "b2c19a03cf159dae59c86a0e692ef127ec4aa64f" }
enum-map = { version = "2.0.3", features = ["serde"] }
serde_json = "1.0"
ron = "0.7.0"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
path-clean = "0.1.0"
bevy = { version = "0.7.0", features = ["serialize"] }
bevy_egui = "0.14.0"
bevy_ecs_tilemap = "0.6.0"
log = "0.4"
env_logger = "0.9.0"
futures = "0.3"
ldtk_rust = { git = "https://github.com/aleokdev/ldtk_rust" }
bitflags = "1.3.2"


[profile.dev.package.ggez]
opt-level = 3
