[package]
name = "platformer-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# LDtk loading
ldtk_rust = { git = "https://github.com/aleokdev/ldtk_rust" }
serde_json = "1.0.81"

# Input bindings
enum-map = { version = "2.0.3", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
ron = "0.7.0"

# Asset loading
anyhow = "1.0"

# Physics
bitflags = "1.3.2"

# Engine
bevy = { version = "0.7.0", features = ["serialize", "filesystem_watcher"] }

# Engine egui integration
bevy_egui = "0.14.0"

# Tilemap instancing
bevy_ecs_tilemap = "0.6.0"


[profile.dev.package.bevy]
opt-level = 3
